--- a/01-Instance/04-elasticip.tf.example
+++ b/01-Instance/04-elasticip.tf.example
@@ -2,3 +2,8 @@ resource "aws_eip" "node" {
   instance = "${aws_instance.web.id}"
   vpc      = true
 }
+
+resource "aws_eip" "node2" {
+  instance = "${aws_instance.web2.id}"
+  vpc      = true
+}
